--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (172)</h2>
+                <h2>APWorlds (173)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -93,14 +93,6 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1120157130100572260">Link</a>]</li>
                 </ul>
 
-                <h3><span id="AirDelivery"></span> Air Delivery (PICO-8)</h3>
-
-                <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/qwint/ap-air-delivery/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/qwint/ap-air-delivery/blob/main/apworld/docs/setup_en.md">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252453771661803523">Link</a>]</li>
-                </ul>
-
                 <h3><span id="ALinkToThePast"></span> A Link to the Past (SNES)</h3>
 
                 <ul>
@@ -108,23 +100,6 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/StripesOO7/alttp-ap-poptracker-pack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/A%20Link%20to%20the%20Past/multiworld/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/827141303330406408">Link</a>]</li>
-                </ul>
-
-                <h3><span id="ANIMALWELL"></span> ANIMAL WELL (PC)</h3>
-
-                <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> [<a href="https://github.com/SporyTike/ANIMAL-WELL-AP-Tracker/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/blob/animal-well/worlds/animal_well/docs/setup_en.md">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1238463626344665119">Link</a>]</li>
-                </ul>
-
-                <h3><span id="Aquaria"></span> Aquaria (PC)</h3>
-
-                <ul>
-                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/tioui/Archipelago/blob/main/worlds/aquaria/docs/setup_en.md">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1211781531199078440">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ARobotNamedFight"></span> A Robot Named Fight! (PC)</h3>
@@ -154,6 +129,23 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090814076378153111">Link</a>]</li>
                 </ul>
 
+                <h3><span id="AgainstTheStorm"></span> Against the Storm (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/RyanCirincione/ArchipelagoATS/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://thunderstore.io/c/against-the-storm/p/ATS_for_AP_Team/Against_The_Storm_for_Archipelago/">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/RyanCirincione/ArchipelagoATS/blob/main/worlds/against_the_storm/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1250491355290140672">Link</a>]</li>
+                </ul>
+
+                <h3><span id="AirDelivery"></span> Air Delivery (PICO-8)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/qwint/ap-air-delivery/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/qwint/ap-air-delivery/blob/main/apworld/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252453771661803523">Link</a>]</li>
+                </ul>
+
                 <h3><span id="AnUntitledStory"></span> An Untitled Story (PC)</h3>
 
                 <ul>
@@ -165,6 +157,15 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1194062970230165554">Link</a>]</li>
                 </ul>
 
+                <h3><span id="ANIMALWELL"></span> ANIMAL WELL (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/SporyTike/ANIMAL-WELL-AP-Tracker/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/blob/animal-well/worlds/animal_well/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1238463626344665119">Link</a>]</li>
+                </ul>
+
                 <h3><span id="ApeEscape"></span> Ape Escape (PSX)</h3>
 
                 <ul>
@@ -173,6 +174,15 @@
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/CDRomatron/Archipelago-Ape-Escape/releases/tag/v0.3">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1168645708103028856">Link</a>]</li>
                 </ul>
+
+                <h3><span id="Aquaria"></span> Aquaria (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/tioui/Archipelago/blob/main/worlds/aquaria/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1211781531199078440">Link</a>]</li>
+                </ul>
+
 
                 <h3><span id="ArchipIDLE"></span> ArchipIDLE (Web)</h3>
 
@@ -592,7 +602,7 @@
                 <h3><span id="Hammerwatch"></span> Hammerwatch (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1251362300477309059">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1254492943847391435">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago-Mod-Installer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1228893356596265000">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago/blob/dev/worlds/hammerwatch/docs/setup_en.md">Link</a>]</li>
