--- a/index.html
+++ b/index.html
@@ -46,14 +46,40 @@
                     </p>
                 </header>
 
+                <h2 id="D20240624">June 24th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Final Fantasy 5 Career Day [<a href="apworlds.html#FinalFantasy5CareerDay">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Final Fantasy XIV [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240623">June 23rd, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Tracker Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> DOOM II [<a href="apworlds.html#DOOMII">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240622">June 22nd, 2024</h2>
