--- a/index.html
+++ b/index.html
@@ -46,16 +46,66 @@
                     </p>
                 </header>
 
+                <h2 id="D20240626">June 26th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>`
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Baldi's Basics Classic Remastered [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240625">June 25th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Air Delivery [<a href="apworlds.html#AirDelivery">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Land 2 [<a href="apworlds.html#SuperMarioLand2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Air Delivery [<a href="apworlds.html#AirDelivery">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Pokemon Platinum [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240624">June 24th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Final Fantasy 5 Career Day [<a href="apworlds.html#FinalFantasy5CareerDay">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy 6 Worlds Collide [<a href="apworlds.html#FinalFantasy6WorldsCollide">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts Re:Chain of Memories [<a href="apworlds.html#KingdomHeartsReChainOfMemories">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                </ul>
+                
+                <ul>
+                    <li><strong>Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Final Fantasy XIV [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Epic Battle Fantasy 3 [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240623">June 23rd, 2024</h2>
