--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
                 <h2 id="D20240623">June 23rd, 2024</h2>
 
                 <ul>
+                    <li><strong>AP Release Candidate</strong> 0.5.0 RC3 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1254541445898178580">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
