--- a/index.html
+++ b/index.html
@@ -46,6 +46,50 @@
                     </p>
                 </header>
 
+                <h2 id="D20240629">June 29th, 2024</h2>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Tale of Two Wastelands [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240628">June 28th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Tekken 4 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240627">June 27th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter [<a href="apworlds.html#JakAndDaxter">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Dexsanity [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Minesveeper [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Final Fantasy 5 Career Day [<a href="apworlds.html#FinalFantasy5CareerDay">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240626">June 26th, 2024</h2>
 
                 <ul>
@@ -60,6 +104,7 @@
 
                 <ul>
                     <li><strong>New Manual APWorld</strong> Baldi's Basics Classic Remastered [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Tale of Two Wastelands [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240625">June 25th, 2024</h2>
