--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (175)</h2>
+                <h2>APWorlds (176)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -611,7 +611,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Cynichill/DivaAPworld/releases">Link</a>]</li>
-                    <li><strong>Game Mod</strong> [<a href="https://gamebanana.com/mods/514140">Link</a>]</li>
+                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1241134454391443580/1258176690413375554">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Cynichill/DivaAPworld/blob/main/docs/en_Mega_Mix.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1241134454391443580">Link</a>]</li>
                 </ul>
@@ -811,7 +811,7 @@
                 <h3><span id="MarioIsMissing"></span> Mario is Missing (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1188695271941603348/1203842876035825695">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1188695271941603348/1257884761163042898">Link</a>]</li>
                     <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1188695271941603348/1209970290637934592">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1188695271941603348">Link</a>]</li>
                 </ul>
@@ -881,6 +881,13 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/Electro1512/MetroidAPrime/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Electro1512/MetroidAPrime/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1172631093837570068">Link</a>]</li>
+                </ul>
+
+                <h3><span id="MetroidZeroMission"></span> Metroid: Zero Mission (GBA)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/lilDavid/Archipelago-Metroid-Zero-Mission/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1106280250528235620">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Minecraft"></span> Minecraft (PC)</h3>
@@ -1034,6 +1041,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/vyneras/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/vyneras/pokemon-frlg-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/vyneras/Archipelago/blob/0.1.0-alpha/worlds/pokemon_frlg/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1232325933902467082">Link</a>]</li>
                 </ul>
@@ -1552,7 +1560,7 @@
                 <h3><span id="Wargroove2"></span> Wargroove 2 (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1252756187632500759">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1258108035956736030">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/FlySniper/Archipelago/blob/wargroove2/worlds/wargroove2/docs/wargroove2_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1159482310652076082">Link</a>]</li>
                 </ul>
