--- a/index.html
+++ b/index.html
@@ -46,10 +46,36 @@
                     </p>
                 </header>
 
+                <h2 id="D20240703">July 3rd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Bloons TD 6 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240702">July 2nd, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mario is Missing! [<a href="apworlds.html#MarioIsMissing">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
                 </ul>
 
@@ -58,10 +84,17 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Game Update Merged</strong> Zillion: <em>New map generation feature</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3604">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Manual APWorld Update</strong> Adventure Forward 2 Restored [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Baldi's Basics Classic Remastered [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Epic Battle Fantasy 5 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Little Inferno [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Puyo Puyo Tetris 2 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Smash Ultimate Quickplay [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Super Mario World - Special Zone [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Tekken 3 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Ultimate Marvel vs. Capcom 3 [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
@@ -73,6 +106,10 @@
 
                 <ul>
                     <li><strong>New Beta APWorld</strong> Kingdom Hearts 2 [<a href="apworlds.html#KingdomHearts2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240701">July 1st, 2024</h2>
