--- a/index.html
+++ b/index.html
@@ -46,6 +46,41 @@
                     </p>
                 </header>
 
+                <h2 id="D20240705">July 5th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240704">July 4th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Paper Mario: The Thousand-Year Door [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> PewDiePie: Legend of the Brofist [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> SSBU: World of Light [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Super Smash Brothers Ultimate [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Tower Unite [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Mario and Luigi: Bowser's Inside Story [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240703">July 3rd, 2024</h2>
 
                 <ul>
@@ -65,6 +100,9 @@
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Bloons TD 6 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> LEGO Batman: The Videogame [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Paper Mario: The Thousand-Year Door [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Team Fortress 2 - Mann vs. Machine [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
