--- a/apworlds.html
+++ b/apworlds.html
@@ -400,6 +400,7 @@
 
                 <ul>
                     <li><strong>APWorld + Connector</strong> [<a href="https://github.com/zakwiz/DiddyKongRacingAP/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/theUofCWildcat/DKR-Poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/zakwiz/DiddyKongRacingAP/blob/v0.1.0/worlds/diddy_kong_racing/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1057754627795337387">Link</a>]</li>
                 </ul>
