--- a/index.html
+++ b/index.html
@@ -49,8 +49,36 @@
                 <h2 id="D20240705">July 5th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#osu">Link</a>]</li>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Pac-Man World 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Paper Mario: The Thousand-Year Door [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Inscryption [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3621">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Lethal League Blaze [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> DLC Quest [<a href="apworlds.html#DLCQuest">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Yoshi's Island [<a href="apworlds.html#YoshisIsland">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240704">July 4th, 2024</h2>
